--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@tensorflow/tfjs": "^3.6.0",
     "babylonjs": "^4.2.0",
     "d3": "^6.7.0",
-    "live-server": "^1.2.1"
+    "linear-algebra": "^3.1.4",
+    "live-server": "^1.2.1",
+    "requirejs": "^2.3.6"
   },
   "devDependencies": {},
   "scripts": {
